# P2P-Wallet

./: .gitignore  README.md  package.json  pyproject.toml
apps/next/: package.json
apps/next/pages/: _app.tsx
backend/: app.py  cli.py  db.py  models.py  run_seed.py  schema.py
backend/data/: users.csv
